# linkage

./: Makefile  README.md
dyn/: Cargo.toml
ent/: Cargo.toml
ent/src/: main.rs
msg/: Cargo.toml
msg/src/: lib.rs
noe/: Cargo.toml  build.rs
noe/src/: main.rs  start.s
