[package]
name = "noe"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg = { path = "../msg" }

[build-dependencies]
cc = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
